feat(lock_utils): Add lock utility source and test executables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,6 +138,7 @@ set(COMMON_SOURCES
     src/pooled_session.cpp
     src/connection_pool_manager.cpp
     src/request_handler.cpp
+    src/lock_utils.cpp
 )
 
 add_library(etl_common STATIC ${COMMON_SOURCES})
@@ -232,6 +233,8 @@ create_test_executable(test_pooled_session scripts/test_pooled_session.cpp)
 create_test_executable(test_pooled_session_integration scripts/test_pooled_session_integration.cpp)
 create_test_executable(demo_request_validator scripts/demo_request_validator.cpp)
 create_test_executable(demo_response_builder_simple scripts/demo_response_builder_simple.cpp)
+create_test_executable(test_lock_utils scripts/test_lock_utils.cpp)
+create_test_executable(demo_lock_utils scripts/demo_lock_utils.cpp)
 
 # GTest-based targets
 if(GTest_FOUND AND ENABLE_TESTS)
