Refactor and enhance various components
- Introduced type traits for string joining in string_utils.hpp to support string-like types and improve join function efficiency.
- Updated ScopedTimer to use steady_clock for more accurate timing and added exception handling for type registration in template_utils.hpp.
- Replaced mutex with timed_mutex in timeout_manager.hpp and implemented ScopedTimedLock for better lock management.
- Standardized locking patterns across components, ensuring consistent use of RAII lock helpers and documented lock ordering requirements.
- Enhanced ConnectionPoolManager to accept MonitorConfig and QueueConfig structs for better configuration management.
- Added comprehensive tests for string joining functionality in test_string_utils.cpp.
- Removed obsolete test scripts to streamline the testing process.
- Improved UUID generation in type_definitions.cpp for thread safety.
- Added a new test file for template utilities to validate factory registration and creation logic.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
-cmake_policy(SET CMP0167 NEW)
+
+if(POLICY CMP0167)
+    cmake_policy(SET CMP0167 NEW)
+endif()
+
 project(ETLPlusBackend)
 
 set(CMAKE_CXX_STANDARD 20)
@@ -233,8 +237,10 @@ create_test_executable(test_pooled_session scripts/test_pooled_session.cpp)
 create_test_executable(test_pooled_session_integration scripts/test_pooled_session_integration.cpp)
 create_test_executable(demo_request_validator scripts/demo_request_validator.cpp)
 create_test_executable(demo_response_builder_simple scripts/demo_response_builder_simple.cpp)
-create_test_executable(test_lock_utils scripts/test_lock_utils.cpp)
-create_test_executable(demo_lock_utils scripts/demo_lock_utils.cpp)
+if(ENABLE_TESTS)
+  create_test_executable(test_lock_utils scripts/test_lock_utils.cpp)
+  create_test_executable(demo_lock_utils scripts/demo_lock_utils.cpp)
+endif()
 
 # GTest-based targets
 if(GTest_FOUND AND ENABLE_TESTS)
