feat(gitignore): Add coverage report files and profiling data to .gitignore
feat(timeout_manager): Update handleTimeout to include fired timer for better timer management

refactor(exception_mapper): Simplify global exception mapper initialization and improve type handler locking

fix(request_handler): Correct error message for job update validation failure

refactor(concurrency_benchmark): Use atomic counter for thread-safe increment in benchmarks

--- a/.gitignore
+++ b/.gitignore
@@ -117,11 +117,16 @@ config/*_local.json
 
 # Coverage reports
 coverage/
+coverage_report/
+coverage.info
 *.gcov
 *.gcno
 *.gcda
 lcov.info
 coverage.xml
+gcovr.xml
+*.profraw
+*.profdata
 
 # Profiling data
 gmon.out
