Refactor and enhance various components
- Removed wrk-results.txt from benchmark results path in benchmarks.yml.
- Simplified test execution in ci-cd.yml by removing error handling for missing tests.
- Updated CMakeLists.txt to search for libpqxx in additional library paths.
- Changed database credentials in config.json to use environment variables.
- Improved rollback.sh to ensure logs directory exists with proper permissions and added health check error handling.
- Updated overview.md to correct Markdown syntax for ComponentLogger.
- Removed redundant User and Session structs from auth_manager.hpp, now included in user.hpp and session_model.hpp.
- Modified flattenJson function in config_manager.hpp to support depth limiting.
- Added new ETLJob and Session structs in etl_job_models.hpp and session_model.hpp respectively.
- Enhanced error handling in auth_manager.cpp for user updates.
- Updated JSON utility functions to use nlohmann::json in connection_pool.cpp.
- Improved feature flag validation in feature_flags.cpp.
- Added mutex protection for configuration updates in message_broadcaster.cpp.
- Integrated escapeJsonString utility in various response handling functions across multiple files.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -157,11 +157,11 @@ jobs:
       run: |
         echo "Running WebSocket component specific tests..."
         # Run tests for ConnectionPool
-        ctest -R "ConnectionPool" --output-on-failure || echo "ConnectionPool tests not found, continuing..."
+        ctest -R "ConnectionPool" --output-on-failure
         # Run tests for MessageBroadcaster
-        ctest -R "MessageBroadcaster" --output-on-failure || echo "MessageBroadcaster tests not found, continuing..."
+        ctest -R "MessageBroadcaster" --output-on-failure
         # Run tests for WebSocketManager
-        ctest -R "WebSocketManager" --output-on-failure || echo "WebSocketManager tests not found, continuing..."
+        ctest -R "WebSocketManager" --output-on-failure
 
     - name: 📊 Generate Code Coverage
       if: matrix.os == 'ubuntu-latest'
