--- a/config.json
+++ b/config.json
@@ -8,12 +8,12 @@
     "host": "localhost",
     "port": 5432,
     "name": "etl_db",
-    "username": "etl_user",
-    "password": "etl_password",
+    "username": "${DB_USERNAME}",
+    "password": "${DB_PASSWORD}",
     "type": "postgresql"
   },
   "auth": {
-    "jwt_secret": "your-secret-key-here",
+    "jwt_secret": "${JWT_SECRET}",
     "session_timeout": 3600
   },
   "etl": {
