feat: Update docker-compose environment variables to support dynamic user and password configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: etl_postgres
     environment:
       POSTGRES_DB: etl_db
-      POSTGRES_USER: etl_user
-      POSTGRES_PASSWORD: etl_password
+      POSTGRES_USER: ${POSTGRES_USER:-etl_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5432:5432"
     volumes:
@@ -33,8 +33,8 @@ services:
       - DATABASE_HOST=postgres
       - DATABASE_PORT=5432
       - DATABASE_NAME=etl_db
-      - DATABASE_USER=etl_user
-      - DATABASE_PASSWORD=etl_password
+      - DATABASE_USER=${DATABASE_USER:-etl_user}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - DATABASE_TYPE=postgresql
       - JWT_SECRET=development-jwt-secret-key-for-local-testing
     volumes:
