feat: Enhance security by validating JWT secret length and implementing constant-time password comparison

--- a/helm/etlplus-backend/templates/secret.yaml
+++ b/helm/etlplus-backend/templates/secret.yaml
@@ -6,6 +6,6 @@ metadata:
     {{- include "etlplus-backend.labels" . | nindent 4 }}
 type: Opaque
 stringData:
-  database-host: {{ .Values.secrets.databaseHost | quote }}
-  database-password: {{ .Values.secrets.databasePassword | quote }}
-  jwt-secret: {{ .Values.secrets.jwtSecret | quote }}
+  database-host: {{ required "missing secret: databaseHost" .Values.secrets.databaseHost | quote }}
+  database-password: {{ required "missing secret: databasePassword" .Values.secrets.databasePassword | quote }}
+  jwt-secret: {{ required "missing secret: jwtSecret" .Values.secrets.jwtSecret | quote }}
