Enhance various components with improved error handling, validation, and performance optimizations
- Updated `test_cache_warmup.cpp` to improve batch processing logic by clamping step size based on remaining data.
- Enhanced `test_db_connection_pool_load.sh` for better CPU and memory usage detection across platforms, including improved error handling for SQL queries.
- Refactored `test_redis_cache_load.sh` to use a consistent Redis command interface.
- Modified `cache_manager.cpp` to streamline cache data storage logic based on the presence of tags and added validation for warmupMaxKeys.
- Improved input validation in `input_validator.cpp` by re-enabling regex checks for email and job ID formats, and enhanced job status validation.
- Updated `jwt_key_manager.cpp` to improve JWT key generation with cryptographic security and better error logging.
- Enhanced `redis_cache.cpp` with detailed error logging for connection and authentication failures.
- Improved `security_auditor.cpp` with precompiled regex patterns for dangerous function detection and refined path traversal checks.
- Refactored `security_validator.cpp` to implement rate limiting with configurable options and added CSP nonce generation and validation.
- Enhanced `ssl_manager.cpp` to validate output directories, improve certificate generation with OpenSSL, and ensure secure file permissions.
- Added `test_ssl_cert_generation.cpp` to validate SSL certificate generation functionality and check file creation and permissions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -231,6 +231,7 @@ if(NOT HIREDIS_FOUND)
             /opt/homebrew/include
             /usr/local/include
             /usr/include
+        NO_DEFAULT_PATH
     )
     find_library(HIREDIS_LIBRARIES
         NAMES hiredis
@@ -238,6 +239,7 @@ if(NOT HIREDIS_FOUND)
             /opt/homebrew/lib
             /usr/local/lib
             /usr/lib
+        NO_DEFAULT_PATH
     )
 
     if(HIREDIS_INCLUDE_DIR AND HIREDIS_LIBRARIES)
