Update jsoncpp library path handling for macOS; ensure compatibility with Linux pkg-config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,7 +119,8 @@ if(NOT JSONCPP_FOUND)
     endif()
 else()
     message(STATUS "Found jsoncpp via pkg-config: ${JSONCPP_LIBRARIES}")
-    if(JSONCPP_LIBRARIES MATCHES "jsoncpp")
+    # Only override for macOS/Homebrew, not for Linux/pkg-config
+    if(JSONCPP_LIBRARIES MATCHES "jsoncpp" AND CMAKE_SYSTEM_NAME STREQUAL "Darwin")
         set(JSONCPP_LIBRARIES "/opt/homebrew/Cellar/jsoncpp/1.9.6/lib/libjsoncpp.dylib")
         message(STATUS "Using jsoncpp library path: ${JSONCPP_LIBRARIES}")
     endif()
