Add Redis support and refactor RequestHandler for improved initialization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,6 +217,9 @@ endif()
 # Expose JWT feature flag
 add_compile_definitions(ETL_ENABLE_JWT=$<BOOL:${JWT_CPP_FOUND}>)
 
+# Expose Redis feature flag
+add_compile_definitions(ETL_ENABLE_REDIS=$<BOOL:${HIREDIS_FOUND}>)
+
 # Try to find hiredis (Redis C client library)
 find_package(PkgConfig QUIET)
 if(PkgConfig_FOUND)
@@ -285,7 +288,7 @@ set(COMMON_SOURCES
     src/config_manager.cpp
     src/database_manager.cpp
     src/database_connection_pool.cpp
-    src/redis_cache.cpp
+    $<$<BOOL:${HIREDIS_FOUND}>:src/redis_cache.cpp>
     src/cache_manager.cpp
     src/database_schema.cpp
     src/user_repository.cpp
