Add Redis service to Docker Compose and configure Redis settings
- Introduced Redis service with health checks and volume mappings.
- Updated environment variables for Redis connection in the backend service.
- Added Redis configuration file with basic settings for memory management, persistence, and security.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,22 @@ services:
       timeout: 5s
       retries: 5
 
+  redis:
+    image: redis:7-alpine
+    container_name: etl_redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+      - ./redis.conf:/etc/redis/redis.conf
+    command: redis-server /etc/redis/redis.conf
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 3
+
   etlplus-backend:
     build:
       context: .
@@ -36,12 +52,18 @@ services:
       - DATABASE_USER=${DATABASE_USER:-etl_user}
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - DATABASE_TYPE=postgresql
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=${REDIS_PASSWORD:-}
       - JWT_SECRET=development-jwt-secret-key-for-local-testing
+      - ETL_ENABLE_REDIS=1
     volumes:
       - ./logs:/app/logs
       - ./config:/app/config:ro
     depends_on:
       postgres:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     restart: unless-stopped
     healthcheck:
@@ -53,3 +75,4 @@ services:
 
 volumes:
   postgres_data:
+  redis_data:
